@@ -666,6 +666,8 @@ lw_dist2d_pt_ptarray(POINT2D *p, POINTARRAY *pa,DISTPTS *dl)
 
 	getPoint2d_p(pa, 0, &start);
 
+	if ( !lw_dist2d_pt_pt(p, &start, dl) ) return LW_FALSE;
+
 	for (t=1; t<pa->npoints; t++)
 	{
 		dl->twisted=twist;
