@@ -220,3 +220,4 @@ NOTICE:  SRID value -1 converted to the officially unknown SRID value 0
 #1776|POLYGON((0 0,10 0,10 10,0 0))|POLYGON((0 0,10 0,10 10,0 0))
 #1791|4.7
 ERROR:  ST_Segmentize: invalid max_distance 0 (must be >= 0)
+#1957|1
